feat: created Experiences page and Container component

--- a/src/translations/pt-br.json
+++ b/src/translations/pt-br.json
@@ -6,5 +6,8 @@
   "Home": {
     "myName": "Luciel Santos",
     "responsibility": "Desenvolvedor Frontend"
+  },
+  "Experiencies": {
+    "title": "Experiências"
   }
 }
