feat: upgrade next version to 15

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -6,5 +6,8 @@
   "Home": {
     "myName": "Luciel Santos",
     "responsibility": "Frontend Developer"
+  },
+  "Experiencies": {
+    "title": "Experiencies"
   }
 }
