feat: add social medias section

--- a/src/translations/pt-br.json
+++ b/src/translations/pt-br.json
@@ -11,6 +11,9 @@
     "title": "Experiências"
   },
   "Skills": {
-    "title": "Compentências"
+    "title": "Competências"
+  },
+  "SocialMedias": {
+    "title": "Redes Sociais"
   }
 }
